Added Spring-Boot-Actuator and configured it.